<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context="com.example.dina.scorekeeper.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/egypt" />

                <TextView
                    android:id="@+id/egypt_team_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/egypt_goals_score"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/egypt_score_size"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="egyptGoal"
                    android:text="@string/egypt_goals_button" />

                <TextView
                    android:id="@+id/egypt_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/egypt_fouls_score"
                    android:textSize="@dimen/score_size"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="egyptFoul"
                    android:text="@string/egypt_fouls_button" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/egypt_red_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/egypt_rcards_num"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/margin_right"
                            android:background="@color/red"
                            android:gravity="center"
                            android:onClick="egyptRedCard"
                            android:text="@string/egypt_red_cards_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/egypt_yellow_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/egypt_ycard_num"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_left"
                            android:background="@color/yellow"
                            android:gravity="center"
                            android:onClick="egyptYellowCard"
                            android:text="@string/egypt_yellow_cards_button" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="reset"
                android:text="@string/reset_button" />


            <LinearLayout
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/uruguay" />

                <TextView
                    android:id="@+id/uruguay_team_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/uruguay_goals_score"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/uruguay_score_size"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="urugGoal"
                    android:text="@string/uruguay_goals_button" />

                <TextView
                    android:id="@+id/uruguay_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/uruguay_fouls_score"
                    android:textSize="@dimen/score_size"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="urugFoul"
                    android:text="@string/uruguay_fouls_button" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="@dimen/layout_width"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/uruguay_red_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/uruguay_rcards_num"
                                android:textSize="@dimen/score_size"
                                android:textStyle="bold" />


                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/margin_right"
                                android:background="@color/red"
                                android:gravity="center"
                                android:onClick="urugRedCard"
                                android:text="@string/uruguay_red_cards_button" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="@dimen/layout_width"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/uruguay_yellow_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/uruguay_ycards_num"
                                android:textSize="@dimen/score_size"
                                android:textStyle="bold" />

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/margin_left"
                                android:background="@color/yellow"
                                android:gravity="center"
                                android:onClick="urugYellowCard"
                                android:text="@string/uruguay_yellow_cards_button" />
                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
